--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -4,7 +4,9 @@
     {{#if username}}
     Welcome: <span class="text-primary">{{username}}</span>
     <button id="logout" onclick="logout()" class="btn btn-secondary">Logout</button>
+         <button onclick="{{link}}" class="btn btn-success">{{btnName}}</button>
+    {{else}}
+        <button id="loginButton" class="btn btn-success">Login</button>
     {{/if}}
-    <button onclick="{{link}}" class="btn btn-secondary" id="loginButton">{{btnName}}</button>
   </span>
 </nav>
