--- a/views/index.hbs
+++ b/views/index.hbs
@@ -128,12 +128,12 @@
     <tbody>
     <tr>
         <td style="text-align:left">1</td>
-        <td style="text-align:left">You provide a ERD diagram representing the data and its relationships. This may be included in Cloud9 as a picture or from a designer tool</td>
+        <td style="text-align:left; background-color: green">You provide a ERD diagram representing the data and its relationships. This may be included in Cloud9 as a picture or from a designer tool</td>
         <td style="text-align:left">10</td>
     </tr>
     <tr>
         <td style="text-align:left">2</td>
-        <td style="text-align:left">Tables in MySQL match the ERD and support the requirements of the application</td>
+        <td style="text-align:left; background-color: green">Tables in MySQL match the ERD and support the requirements of the application</td>
         <td style="text-align:left">20</td>
     </tr>
     <tr>
@@ -148,17 +148,17 @@
     </tr>
     <tr>
         <td style="text-align:left">5</td>
-        <td style="text-align:left">A user can add an available time slot to the MySQL using the API endpoint and displayed using the specified modal design</td>
+        <td style="text-align:left; background-color: green">A user can add an available time slot to the MySQL using the API endpoint and displayed using the specified modal design</td>
         <td style="text-align:left">20</td>
     </tr>
     <tr>
         <td style="text-align:left">6</td>
-        <td style="text-align:left">A user can remove an available time slot from MySQL using the API endpoint</td>
+        <td style="text-align:left; background-color: green">A user can remove an available time slot from MySQL using the API endpoint</td>
         <td style="text-align:left">15</td>
     </tr>
     <tr>
         <td style="text-align:left">7</td>
-        <td style="text-align:left">The user confirms the removal using the specified modal design</td>
+        <td style="text-align:left; background-color: green">The user confirms the removal using the specified modal design</td>
         <td style="text-align:left">10</td>
     </tr>
     <tr>
