--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -97,13 +97,13 @@
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label for="newStart">Start time:</label>
-                            <input type="text" class="form-control" id="newStart">
+                            <input type="text" placeholder="HH:MM:SS"  class="form-control" id="newStart">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="form-group col-md-12">
                             <label for="newEnd">End time:</label>
-                            <input type="text" class="form-control" id="newEnd">
+                            <input type="text" placeholder="HH:MM:SS" class="form-control" id="newEnd">
                         </div>
                     </div>
                 </form>
