added display rubric button

--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -148,7 +148,7 @@
                 <div class="text-center">
                     <h5 id="deleteSuccess" class="text-success"></h5>
                     <div id="deleteFailed">
-                        <h5 id="" class="text-danger">Delete Failed</h5>
+                        <h5 id="" class="text-">Delete Failed</h5>
                     </div>
                 </div>
             </div>
