--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,6 +6,7 @@ html {
 body {
     display: flex;
     flex-direction: column;
+    background-color: #F0F8FF;
 }
 
 .content {
@@ -13,9 +14,9 @@ body {
 }
 
 .navbar {
-    background-color: #e9ecef;
+    background-color: #696969;
 }
 
 .darkBackground{
-    background-color: gray;
+    background-color: #5F9EA0;
 }
