--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,13 +1,13 @@
 <div class="darkBackground py-5">
     <div class="container lightFont pt-5 nav-space">
         <div class="text-center">
-            <h3 class="mb-4">Welcome to the Scheduler app. Sign in or make an account to get started on your scheduler journey</span></h3>
+            <h3 class="mb-4">Welcome to the Scheduler app. Sign in or make an account to get started on your scheduler journey</h3>
             <h3>If you would like to schedule an appointment with someone through the scheduler app please ask
             them for an url key</h3>
         </div>
         <div class="my-5 text-center">
             <button class="btn btn-primary" data-toggle="modal" data-target="#modalRegisterForm"
-                    {{#if username}}disabled{{/if}}>Sign Up</button>
+                    /{{#if username}}disabled{{/if}}>Sign Up</button>
         </div>
     </div>
 </div>
